Attempting to fix dark mode issues with Chromium

--- a/apex.css
+++ b/apex.css
@@ -18,7 +18,7 @@ h1 {
   margin-inline: 0rem;
   line-height: 5rem;
   font-size: 4rem;
-  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.75);
+  text-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
   text-align: center;
 }
 
@@ -69,6 +69,8 @@ h3 {
   align-items: center;
   justify-content: center;
   height: 80%;
+  background-color: rgba(0, 0, 0, 0.35);
+  background-blend-mode: darken;
   background-image: url("apeximg/kc.png");
   background-size: cover;
   background-position: center;
@@ -82,10 +84,17 @@ h3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+
   background-image: url("apeximg/ol.png");
   background-size: cover;
   background-position: center;
   align-items: center;
+}
+
+@media (forced-colors: active) {
+  .footer h2 {
+    color: var(--clr-dark);
+  }
 }
 
 @media screen and (min-width: 1440px) {
